src/test/deca/codegen/valid/intermediaire/00readInt.deca
{
    int x;
    int y = readInt();
    x = readInt();
    println(x);
    println(y);
}