src/test/deca/codegen/invalid/decaObjet/NoCheck/00pointerNull.deca
class A {
    int x;
}
{
    A a = null;
    println(a.x);
}